@@ -208,7 +208,7 @@ respond in gzipped format. All requests are sent uncompressed regardless.
 External dependencies should be pulled automatically on gem install. Here is the
 list though:
 
-  - Google Ads Common library (google-ads-common-0.6.1);
+  - Google Ads Common library (google-ads-common-0.7.0);
   - Savon 'the heavy metal Ruby SOAP client' (savon-0.9.9).
 
 
