@@ -1,5 +1,6 @@
 0.3.1:
   - Now require Savon-0.9.9 (fixes Content-Length bug).
+  - Require google-ads-common 0.7.0 or later from now on.
 
 0.3.0:
   - Added support and examples for v201203.
